# test-01

./: .gitignore  AUTHORS  ChangeLog  NEWS  README  configure.ac
include/: Makefile.am  test.h
source/: Makefile.am  lib.cpp  main.cpp
validation/: Makefile.am  outsider.cpp  validation.sh.in
